# phronesitron

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  SECURITY.md  buildnotes.md  maintainernotes.md  pyproject.toml  releasenotes.md  setup.py  tox.ini
.github/workflows/: check.yml  dependabot-auto-merge.yml  publish.yml
phronesitron/: paper2txt  ph  phronesitron.py
src/phronesitron/: __init__.py  __main__.py  cli.py  executables.py  ph  phronesitron.py
tests/: test_command.py
