[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phronesitron"
version = "1.0.0"
description = "One-shot LLM CLI with MCP tool support"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm" }]
keywords = ["llm", "cli", "mcp"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "acatome-lambic>=0.5",
    "termcolor>=2.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0,!=1.82.7,!=1.82.8"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/retospect/phronesitron"

[project.scripts]
ph = "phronesitron.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phronesitron"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/phronesitron/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
