[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phronesitron"
version = "1.0.0"
description = "One-shot LLM CLI with MCP tool support"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["llm", "cli", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "acatome-lambic>=0.5.4",
    "termcolor>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/retospect/phronesitron"
Repository = "https://github.com/retospect/phronesitron"

[project.optional-dependencies]
litellm = ["litellm!=1.82.7,!=1.82.8,>=1.83.10"]

[project.scripts]
ph = "phronesitron.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "mypy>=1.20.2",
    "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phronesitron"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # function-call-in-default-argument (typer pattern)
    "B904",    # raise-without-from-inside-except
    "E501",    # line-too-long (formatter handles what it can)
    "E741",    # ambiguous-variable-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF012",  # mutable-class-default (SQLAlchemy/Pydantic models)
    "SIM102",  # collapsible-if
    "SIM103",  # needless-bool
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM110",  # reimplemented-builtin
    "SIM117",  # multiple-with-statements
    "B007",    # unused-loop-control-variable
    "B905",    # zip-without-explicit-strict
    "RUF005",  # collection-literal-concatenation
    "RUF006",  # asyncio-dangling-task
    "RUF013",  # implicit-optional
    "RUF043",  # match-metacharacter-unescaped
    "UP036",   # outdated-version-block
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "E731", "E741", "F841", "RUF012", "RUF015", "RUF059", "UP036"]
"src/**" = ["E402", "F841", "RUF059"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "dict-item",
    "index",
    "method-assign",
    "no-any-return",
    "operator",
    "type-var",
    "union-attr",
    "valid-type",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
